v0.7/_sources/api/generated/metpy.calc.rst.txt
calc
==========

.. automodule:: metpy.calc

   
   
   .. rubric:: Functions

   .. autosummary::
      :toctree: ./

   
      add_height_to_pressure
      add_pressure_to_height
      advection
      bulk_shear
      bunkers_storm_motion
      cape_cin
      convergence_vorticity
      coriolis_parameter
      density
      dewpoint
      dewpoint_rh
      divergence
      dry_lapse
      dry_static_energy
      el
      equivalent_potential_temperature
      find_intersections
      first_derivative
      friction_velocity
      frontogenesis
      geopotential_to_height
      geostrophic_wind
      get_layer
      get_layer_heights
      get_perturbation
      get_wind_components
      get_wind_dir
      get_wind_speed
      h_convergence
      heat_index
      height_to_geopotential
      height_to_pressure_std
      interp
      interpolate_nans
      isentropic_interpolation
      kinematic_flux
      laplacian
      lat_lon_grid_spacing
      lcl
      lfc
      log_interp
      mean_pressure_weighted
      mixed_layer
      mixed_parcel
      mixing_ratio
      mixing_ratio_from_relative_humidity
      mixing_ratio_from_specific_humidity
      moist_lapse
      moist_static_energy
      montgomery_streamfunction
      most_unstable_cape_cin
      most_unstable_parcel
      nearest_intersection_idx
      parcel_profile
      potential_temperature
      precipitable_water
      pressure_to_height_std
      psychrometric_vapor_pressure_wet
      reduce_point_density
      relative_humidity_from_dewpoint
      relative_humidity_from_mixing_ratio
      relative_humidity_from_specific_humidity
      relative_humidity_wet_psychrometric
      resample_nn_1d
      saturation_mixing_ratio
      saturation_vapor_pressure
      second_derivative
      shearing_deformation
      shearing_stretching_deformation
      sigma_to_pressure
      significant_tornado
      specific_humidity_from_mixing_ratio
      storm_relative_helicity
      stretching_deformation
      supercell_composite
      surface_based_cape_cin
      thickness_hydrostatic
      thickness_hydrostatic_from_relative_humidity
      tke
      total_deformation
      v_vorticity
      vapor_pressure
      virtual_potential_temperature
      virtual_temperature
      vorticity
      windchill
   
   

   
   
   

   
   
   